# volctl

./: .editorconfig  .flake8  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  Cargo.toml  Makefile  README.md  _config.yml  config.toml  create-venv.sh  index.html  index.md  pa_mgr.py  params.json  pyproject.toml  setup.py  todo.txt  volctl.desktop  volctl.py  volctl.sh  volume-tray.py
.github/workflows/: deploy.yml  release.yml
content/: _index.md
data/: apps.volctl.gschema.xml  volctl.desktop
src/: app.rs  card.rs  constants.rs  errors.rs  main.rs  meter.rs  pulse.rs  settings.rs  shared.rs
src/app/: imp.rs  mod.rs  tray_callbacks.rs
src/app/imp/: activate.rs  mod.rs
src/pulse/: mod.rs  monitor.rs  types.rs
src/ui/: about_dialog.rs  dialog.rs  mixer_window.rs  mod.rs  tray.rs  tray_service.rs  utils.rs  wayland.rs  x11.rs
src/ui/mixer_window/: constants.rs  imp.rs  mod.rs  wayland.rs  x11.rs
src/ui/mixer_window/scale/: imp.rs  mod.rs
src/ui/osd/: controller.rs  mod.rs  render.rs  widget.rs
src/ui/osd/surface/: mod.rs  wayland.rs  x11.rs
src/ui/prefs_window/: imp.rs  mod.rs
stylesheets/: styles.css
templates/: index.html
templates/injects/: head.html
templates/partials/: header.html
volctl/: __init__.py  __main__.py  _version.py  app.py  apps.volctl.gschema.xml  lib_pulseaudio.py  meta.py  osd.py  pa_mgr.py  prefs.py  pulseaudio.py  pulsemgr.py  slider.py  slider_win.py  status_icon.py  tray.py  volume_overlay.py  xwrappers.py
volctl/lib/: pa_wrapper.py  pulseaudio.py  xwrappers.py
